# nagcam

./: .gitignore  CMakeLists.txt  README.md  build.sh  fmw.md
src/: CFL_m.F90  CMakeLists.txt  IO_m.F90  RHS_m.F90  build.sh  fd1d_heat_explicit.f90  solver_m.F90  types_m.F90
